# goldberg-hexagon-measure

./: README.md  pip_requirements.txt  pyproject.toml  run_goldberg_brick.py
articles/: brinkmann-schein-2017.txt  johnson-2021.txt  liu-2022.txt  mannige-2010.txt  schein-gayed-2014.txt  siber-2020.txt  twarock-2019.txt  virus_T-number_images.txt  voytekhovsky-2018.txt
docs/: CHANGELOG.md  USAGE.md
docs/active_plans/active/: divergence_chirality_labels.md  divergence_paper_citations.md  fix_chiral_reduction.md  solver_paper_parity.md
goldberg_brick/: __init__.py  cli.py  dual.py  equilateral.py  geometry.py  icosahedron.py  indices.py  orbits.py  report.py  triangulation.py
tests/: conftest.py  test_counts.py  test_dual.py  test_equilateral_validation.py  test_indices.py  test_orbits.py
