[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldberg-brick"
version = "26.05"
description = "Graph-only Goldberg polyhedron face orbit reports for Brick planning."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.MIT.md"}
authors = [
	{name = "Neil Voss"},
]

[project.scripts]
goldberg-brick = "goldberg_brick.cli:main"

[tool.setuptools.packages.find]
include = ["goldberg_brick*"]
